[package]
name = "rusty_cron"
version = "0.1.0"
authors = ["yilmazgunalp <yilmazgunalp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
[dev-dependencies]
tempfile = "3"
assert_cmd = "0.10"
predicates = "1"

